# lambdaworks

./: .gitignore  .gitmodules  .rusty-hook.toml  404.html  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  References.md  binary_tree  bootloader_utils.py  default.nix  index.html  introduction.html  objects.py  print.html  requirements.txt  searchindex.js  searchindex.json
benches/: Cargo.toml
benches/benches/: add.rs  batch_inverse.rs  fft.rs  invert.rs  mul.rs  point.rs  poseidon.rs  pow.rs  sqrt.rs  sub.rs  utils.rs
benches/hyperfine/: Cargo.toml
benches/hyperfine/src/: ark_bls12381_field_mul.rs  ark_bls12381_g1_scalar_mul_256bit.rs  ark_bls12381_g2_scalar_mul_256bit.rs  ark_bls12381_pairing.rs  ark_bn254_g1_scalar_mul_256bit.rs  ark_bn254_pairing.rs  lw_bls12381_field_mul.rs  lw_bls12381_g1_glv_scalar_mul.rs  lw_bls12381_g1_scalar_mul_256bit.rs  lw_bls12381_g2_gls_scalar_mul.rs  lw_bls12381_g2_scalar_mul_256bit.rs  lw_bls12381_pairing.rs  lw_bn254_g1_scalar_mul_256bit.rs  lw_bn254_pairing.rs
benches/src/: lib.rs
crates/math/: Cargo.toml  README.md
crates/math/benches/: comparison_arkworks.rs  criterion_asm_fields.rs  criterion_evaluate_offset_fft.rs  criterion_external_comparisons.rs  criterion_fft.rs  criterion_field.rs  criterion_goldilocks_comparison.rs  criterion_goldilocks_hybrid.rs  criterion_metal.rs  criterion_msm.rs  criterion_pairing_micro.rs  criterion_quotient_ring.rs  criterion_unsigned_integer.rs  iai_fft.rs  metal_cfft.rs  metal_fft.rs
crates/math/benchmarks/: iai_elliptic_curve.rs
crates/math/examples/: bench_evaluate_offset_fft.rs  metal_profile.rs  print_showcase.rs  profile_pairing.rs
crates/math/src/: cyclic_group.rs  errors.rs  helpers.rs  lib.rs  traits.rs
crypto/: Cargo.toml  README.md  sdkconfig.defaults
crypto/benches/: criterion_merkle.rs  criterion_pedersen.rs  criterion_poseidon.rs  iai_merkle.rs
crypto/src/: errors.rs  lib.rs
crypto/src/commitments/: README.md  hyrax.rs  ipa.rs  kzg.rs  mod.rs  pedersen.rs  srs.rs  traits.rs
crypto/src/fiat_shamir/: default_transcript.rs  embedded_transcript.rs  is_transcript.rs  mod.rs  test_transcript.rs  transcript.rs
crypto/src/gadgets/: mod.rs  prover.rs  sumcheck.rs
crypto/src/hash/: hash_to_field.rs  helpers.rs  mod.rs  traits.rs
crypto/src/lookups/: errors.rs  mod.rs  multiset.rs  plookup.rs  table.rs  traits.rs
ensure-no_std/: Cargo.toml
ensure-no_std/src/: main.rs
examples/baby-snark/: Cargo.toml  README.md  example.json
examples/bls-signature/: Cargo.toml  README.md
examples/merkle-tree-cli/: Cargo.toml  README.md  leaf.txt  root.txt  sample_tree.csv
examples/prove-gnark-plonk/: Cargo.toml  README.md  example.go  frontend_precomputed_values.json  go.mod
examples/prove-miden/: Cargo.toml  README.md
examples/prove-verify-circom/: Cargo.toml  circom_lambdaworks_tutorial.md
examples/reed-solomon-codes/: Cargo.toml  README.md
examples/rsa/: Cargo.toml  README.md
examples/shamir_secret_sharing/: Cargo.toml  README.md
examples/xmss-signature/: Cargo.toml  README.md
examples/zk-mastermind/: Cargo.toml
exercises/air_workshop/: Cargo.toml
exercises/blind_trust/: Cargo.toml  README.md  proof  srs
exercises/broken_heart/: Cargo.toml  README.md
exercises/challenge_2/: Cargo.toml  README.md
fft/: Cargo.toml  Makefile  benchmarks.html
fft/benches/: criterion_fft.rs  criterion_wf_vs_lw_fft.rs  fft_benchmarks.rs  iai_fft.rs  util.rs
fft/src/: abstractions.rs  errors.rs  fft_iterative.rs  helpers.rs  lib.rs  ops.rs  polynomial.rs  roots_of_unity.rs  test_helpers.rs
fuzz/: Cargo.toml  README.md  poseidon_fuzz.rs
fuzz/cuda_fuzz/: Cargo.toml
fuzz/deserialize_stark_proof/: Cargo.toml
fuzz/fuzz_targets/: field_from_hex.rs  field_from_raw.rs  field_fuzzer.rs  metal_fft_diff.rs  polynomial-fft-diff-fuzzer.rs  polynomial_fft_diff_fuzzer.rs  twiddles_generation.rs
fuzz/metal_fuzz/: Cargo.toml
fuzz/no_gpu_fuzz/: Cargo.toml
fuzzer/: Cargo.toml  README.md  build.rs
fuzzer/fuzzer/: Makefile  build.rs
fuzzer/gnark_backend/: go.mod
fuzzer/src/: cuda_fft_fuzzer.rs  main.rs
gpu/: Cargo.toml  README.md  build.rs
gpu/benches/: all_benchmarks.rs  criterion_cuda.rs  criterion_metal.rs  iai_metal.rs  metal_benchmarks.rs  util.rs
gpu/src/: helpers.rs  lib.rs
gpu/src/cuda/: fft.cu  (+3 more)
hyperfine_bench/: Cargo.toml
hyperfine_bench/src/: ark_bls12381_g1_add.rs  ark_bls12381_pairing.rs  ark_bn254_field_mul.rs  ark_bn254_g1_add.rs  ark_bn254_g1_double.rs  ark_bn254_g1_scalar_mul.rs  ark_bn254_pairing.rs  lw_bls12381_field_add.rs  lw_bls12381_field_mul.rs  lw_bls12381_g1_add.rs  lw_bls12381_g1_double.rs  lw_bls12381_g1_scalar_mul.rs  lw_bls12381_g2_add.rs  lw_bls12381_g2_scalar_mul.rs  lw_bls12381_pairing.rs  lw_bn254_field_add.rs  lw_bn254_field_inv.rs  lw_bn254_field_mul.rs  lw_bn254_field_square.rs  lw_bn254_field_sub.rs  lw_bn254_g1_add.rs  lw_bn254_g1_double.rs  lw_bn254_g1_scalar_mul.rs  lw_bn254_g2_add.rs  lw_bn254_g2_scalar_mul.rs  lw_bn254_pairing.rs
math/: Cargo.toml  Makefile  README.md  build.rs
math/.cargo/: config.toml
math/benches/: all_benchmarks.rs  benchmark.rs  benchmark_msm.rs  benchmark_polynomial.rs  criterion_elliptic_curve.rs  criterion_fft.rs  criterion_field.rs  criterion_icicle.rs  criterion_metal.rs  criterion_msm.rs  criterion_polynomial.rs  fft_benchmarks.rs  field.rs  field_benchmarks.rs  iai_elliptic_curve.rs  iai_fft.rs  iai_field.rs  iai_point_add.rs  iai_polynomial.rs  math_fft_benchmarks.rs  msm.rs  polynomial_benchmarks.rs  util.rs
math/src/: algebraic_element.rs  batch_inverse.rs  config.rs  cyclic_group.rs  elliptic_curve.rs  errors.rs  field_element.rs  field_extension_element.rs  helpers.rs  lib.rs  msm.rs  polynomial.rs  traits.rs  unsigned_integer.rs
math/tests/: wasm.rs  web.rs
prover/: Cargo.toml
prover/src/: errors.rs  lib.rs
test_esp32/: Cargo.toml  Makefile  build.rs
test_esp32/.cargo/: config.toml
test_esp32/src/: main.rs
winterfell_adapter/: Cargo.toml  README.md
winterfell_adapter/benches/: proving.rs
winterfell_adapter/src/: adapter.rs  field_element.rs  lib.rs  utils.rs
(+2013 files in other folders)
