[workspace]

members = [
    "benches",
    "crates/crypto",
    "crates/gpu",
    "crates/math",
    "crates/provers/groth16",
    "crates/provers/groth16/arkworks-adapter",
    "crates/provers/groth16/circom-adapter",
    "crates/provers/plonk",
    "crates/provers/stark",
    "crates/provers/sumcheck",
    "crates/provers/winterfell_adapter",
    "examples/merkle-tree-cli",
    "examples/prove-miden",
    "examples/shamir_secret_sharing",
    "examples/pinocchio",
    "examples/prove-verify-circom",
    "examples/baby-snark",
]
exclude = ["ensure-no_std"]
resolver = "2"

[workspace.package]
version = "0.12.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/lambdaclass/lambdaworks"

[workspace.dependencies]
lambdaworks-crypto = { path = "./crates/crypto", version = "0.12.0", default-features = false }
lambdaworks-gpu = { path = "./crates/gpu", version = "0.12.0" }
lambdaworks-math = { path = "./crates/math", version = "0.12.0", default-features = false }
lambdaworks-groth16 = { path = "./crates/provers/groth16" }
lambdaworks-circom-adapter = { path = "./crates/provers/groth16/circom-adapter" }
lambdaworks-sumcheck = { path = "./crates/provers/sumcheck" }
lambdaworks-winterfell-adapter = { path = "./crates/provers/winterfell_adapter" }
stark-platinum-prover = { path = "./crates/provers/stark" }
iai-callgrind = "0.3.1"

[patch.crates-io]
miden-air = { git = "https://github.com/lambdaclass/miden-vm" }
miden-assembly = { git = "https://github.com/lambdaclass/miden-vm" }
miden-core = { git = "https://github.com/lambdaclass/miden-vm" }
miden-processor = { git = "https://github.com/lambdaclass/miden-vm" }
winter-air = { git = "https://github.com/lambdaclass/winterfell-for-lambdaworks.git", branch = "derive-clone-v6.4" }
winter-prover = { git = "https://github.com/lambdaclass/winterfell-for-lambdaworks.git", branch = "derive-clone-v6.4" }
winter-math = { git = "https://github.com/lambdaclass/winterfell-for-lambdaworks.git", branch = "derive-clone-v6.4" }
winter-utils = { git = "https://github.com/lambdaclass/winterfell-for-lambdaworks.git", branch = "derive-clone-v6.4" }
winter-crypto = { git = "https://github.com/lambdaclass/winterfell-for-lambdaworks.git", branch = "derive-clone-v6.4" }

[profile.bench]
lto = true
codegen-units = 1
opt-level = 3
