[package]
name = "lambdaworks-benches"
version.workspace = true
edition.workspace = true

[dependencies]
ark-ff = { git = "https://github.com/arkworks-rs/algebra", rev = "ef8f758" }
ark-test-curves = { git = "https://github.com/arkworks-rs/algebra", rev = "ef8f758" }
ark-std = "0.4.0"
rand = "0.8.5"
rand_chacha = "0.3.1"

[dependencies.lambdaworks-math]
path = "../math"

[dev-dependencies]
criterion = { version = "0.5.1", default-features = false }

[[bench]]
name = "add"
harness = false

[[bench]]
name = "mul"
harness = false

[[bench]]
name = "sub"
harness = false

[[bench]]
name = "invert"
harness = false

[[bench]]
name = "sqrt"
harness = false

[[bench]]
name = "pow"
harness = false
