[package]
name = "lambdaworks-benches"
version.workspace = true
edition.workspace = true

[dependencies]
ark-ff = { git = "https://github.com/arkworks-rs/algebra", rev = "ef8f758" }
ark-test-curves = { git = "https://github.com/arkworks-rs/algebra", rev = "ef8f758" }
ark-std = "0.4.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
starknet-curve = { git = "https://github.com/xJonathanLEI/starknet-rs", tag = "starknet-curve/v0.4.2" }
starknet-ff = { git = "https://github.com/xJonathanLEI/starknet-rs", tag = "starknet-ff/v0.3.7" }
starknet-crypto = { git = "https://github.com/xJonathanLEI/starknet-rs", tag = "starknet-crypto/v0.6.2" }
pathfinder-crypto = { git = "https://github.com/eqlabs/pathfinder.git" }

lambdaworks-math.workspace = true
lambdaworks-crypto.workspace = true

[dev-dependencies]
criterion = { version = "0.5.1", default-features = false }
rand_chacha = "0.3.1"

[[bench]]
name = "add"
harness = false

[[bench]]
name = "mul"
harness = false

[[bench]]
name = "sub"
harness = false

[[bench]]
name = "invert"
harness = false

[[bench]]
name = "sqrt"
harness = false

[[bench]]
name = "pow"
harness = false

[[bench]]
name = "point"
harness = false

[[bench]]
name = "poseidon"
harness = false
