[package]
name = "lambdaworks-benches"
version.workspace = true
edition.workspace = true

[dependencies]
ark-ff = { version = "0.5.0" }
ark-ec = { version = "0.5.0" }
ark-bls12-381 = { version = "0.5.0" }
ark-bn254 = { version = "0.5.0" }
ark-test-curves = { version = "0.5.0" }
ark-std = "0.4.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
starknet-curve = { git = "https://github.com/xJonathanLEI/starknet-rs", tag = "starknet-curve/v0.4.2" }
starknet-ff = { git = "https://github.com/xJonathanLEI/starknet-rs", tag = "starknet-ff/v0.3.7" }
starknet-crypto = { git = "https://github.com/xJonathanLEI/starknet-rs", tag = "starknet-crypto/v0.6.2" }
pathfinder-crypto = { git = "https://github.com/eqlabs/pathfinder.git" }

lambdaworks-math.workspace = true
lambdaworks-crypto.workspace = true

[dev-dependencies]
criterion = { version = "0.5.1", default-features = false }
rand_chacha = "0.3.1"

[[bench]]
name = "add"
harness = false

[[bench]]
name = "mul"
harness = false

[[bench]]
name = "sub"
harness = false

[[bench]]
name = "invert"
harness = false

[[bench]]
name = "sqrt"
harness = false

[[bench]]
name = "pow"
harness = false

[[bench]]
name = "point"
harness = false

[[bench]]
name = "poseidon"
harness = false

# Standalone binaries for hyperfine benchmarks
[[bin]]
name = "bench_lw_bls12381_pairing"
path = "src/bin/lw_bls12381_pairing.rs"

[[bin]]
name = "bench_ark_bls12381_pairing"
path = "src/bin/ark_bls12381_pairing.rs"

[[bin]]
name = "bench_lw_bn254_pairing"
path = "src/bin/lw_bn254_pairing.rs"

[[bin]]
name = "bench_ark_bn254_pairing"
path = "src/bin/ark_bn254_pairing.rs"

[[bin]]
name = "bench_lw_bls12381_g1_scalar_mul"
path = "src/bin/lw_bls12381_g1_scalar_mul.rs"

[[bin]]
name = "bench_ark_bls12381_g1_scalar_mul"
path = "src/bin/ark_bls12381_g1_scalar_mul.rs"
