[package]
name = "lambdaworks-crypto"
description = "Data structures and primitives for cryptography library"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambdaworks-math.workspace = true
sha3 = "0.10"
sha2 = "0.10"
thiserror = "1.0.38"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"
digest = "0.10.7"
rayon = "1.8.0"

[dev-dependencies]
criterion = "0.5.1"
iai-callgrind.workspace = true
blake2 = { version = "0.10.6", default-features = false }
rand_chacha = { version = "0.3.1", default-features = false }

[features]
test_fiat_shamir = []

[[bench]]
name = "criterion_merkle"
harness = false

[[bench]]
name = "iai_merkle"
harness = false
