[package]
name = "lambdaworks-crypto"
description = "Data structures and primitives for cryptography library"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambdaworks-math = { workspace = true, features = ["alloc"] }
sha3 = { version = "0.10", default-features = false }
sha2 = { version = "0.10", default-features = false }
thiserror-no-std = { version = "2.0.2", default-features = false }

# Optional
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
rayon = { version = "1.8.0", optional = true }

[dev-dependencies]
criterion = "0.4"
iai-callgrind.workspace = true
rand = "0.8.5"

[features]
default = ["std"]
std = ["lambdaworks-math/std", "thiserror-no-std/std", "serde?/std", "sha2/std", "sha3/std"]
serde = ["dep:serde", "lambdaworks-math/lambdaworks-serde-binary"]
test_fiat_shamir = []
parallel = ["dep:rayon"]

[[bench]]
name = "criterion_merkle"
harness = false

[[bench]]
name = "iai_merkle"
harness = false
