[package]
name = "ensure-no_std"
version = "0.1.0"
edition = "2021"


[dependencies]
lambdaworks-math = { path = "../math", default-features = false, features = ["alloc", "lambdaworks-serde-binary", "lambdaworks-serde-string"] }
lambdaworks-crypto = { path = "../crypto", default-features = false, features = ["serde"] }

wee_alloc = "0.4.5"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
