[workspace]
members = ["no_gpu_fuzz", "metal_fuzz", "cuda_fuzz"]
resolver = "2"

[workspace.package]
edition = "2021"
publish = false
version = "0.1.1"

[workspace.dependencies]
lambdaworks-math = { path = "../math" }
lambdaworks-gpu = { path = "../gpu" }
stark-platinum-prover = { path = "../provers/stark" }
libfuzzer-sys = "0.4"

[profile.release]
debug = 1

