[workspace]
members = ["no_gpu_fuzz", "cuda_fuzz"]
resolver = "2"

[workspace.package]
edition = "2021"
publish = false
version = "0.1.1"

[workspace.dependencies]
lambdaworks-math = { path = "../crates/math" }
lambdaworks-gpu = { path = "../crates/gpu" }
stark-platinum-prover = { path = "../crates/provers/stark" }
libfuzzer-sys = "0.4"

[profile.release]
debug = 1
