[package]
name = "lambdaworks-gpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambdaworks-math = { path = "../math" }
lambdaworks-crypto = { path = "../crypto"}
rand = "0.8.5"
metal = "0.24.0"
rust-gpu-tools = { git = "https://github.com/filecoin-project/rust-gpu-tools.git", branch = "master"}

[dev-dependencies]
proptest = "1.1.0"
criterion = "0.4.0"
objc = "0.2.7"

[[bench]]
name = "metal_benchmarks"
harness = false
