[package]
name = "lambdaworks-gpu"
description = "Modular math library for cryptography - GPU implementation"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.38"
metal = { version = "0.24.0", optional = true }
objc = { version = "0.2.7", optional = true }

[features]
metal = ["dep:metal", "dep:objc"]
cuda = ["dep:walkdir"]

# Some features activate compilation of code which isn't
# supported in all machines (e.g. metal, cuda), so we won't
# use `--all-features` in any case, instead every feature
# that should compile in all cases will require to be added
# as default. If you don't want to compile with all of these
# use `--no-default-features`.
default = []

[dev-dependencies]
proptest = "1.1.0"
rand = "0.8.5"

[build-dependencies]
walkdir = { version = "2.3.3", optional = true }
