[package]
name = "lambdaworks-prover"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
lambdaworks-math = { path = "../math" }
# prover = { package = "winter-prover", git = "https://github.com/maxgillett/winterfell", rev = "0aad6a5", version = "0.4", features = ["concurrent"], default-features = false }
# math = { package = "winter-math", git = "https://github.com/maxgillett/winterfell", rev = "0aad6a5", version = "0.4", default-features = false }
# crypto = { package = "winter-crypto", git = "https://github.com/maxgillett/winterfell", rev = "0aad6a5", version = "0.4", features = ["concurrent"] }
# winter-utils = { package = "winter-utils", git = "https://github.com/maxgillett/winterfell", rev = "0aad6a5", default-features = false }
# winterfell = { package = "winter-verifier", git = "https://github.com/maxgillett/winterfell", rev = "0aad6a5", default-features = false }
giza-core = { path = "../../giza_zerosync/giza/core" }
giza-air = { path = "../../giza_zerosync/giza/air" }
giza-prover = { path = "../../giza_zerosync/giza/prover" }
runner = { package = "giza-runner", path = "../../giza_zerosync/giza/runner", version = "0.1" }

winter-prover = { package = "winter-prover", git = "https://github.com/zerosync/winterfell", version = "0.4", features = ["concurrent"], default-features = false }
math = { package = "winter-math", git = "https://github.com/zerosync/winterfell", version = "0.4", default-features = false }
winter-air = { package = "winter-air", git = "https://github.com/zerosync/winterfell", version = "0.4", default-features = false }
crypto = { package = "winter-crypto", git = "https://github.com/zerosync/winterfell", version = "0.4", features = ["concurrent"] }
winter-utils = { package = "winter-utils", git = "https://github.com/zerosync/winterfell", default-features = false }
winter-verifier = { package = "winter-verifier", git = "https://github.com/zerosync/winterfell", default-features = false }
