[package]
name = "lambdaworks-prover"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
lambdaworks-math = { path = "../math" }
thiserror = "1.0.38"

giza-core = { package = "giza-core", git = "https://github.com/lambdaclass/giza", branch = "lambdaworks-mod" }
giza-air = { package = "giza-air", git = "https://github.com/lambdaclass/giza", branch = "lambdaworks-mod" }
giza-prover = { package = "giza-prover", git = "https://github.com/lambdaclass/giza", branch = "lambdaworks-mod" }
runner = { package = "giza-runner", git = "https://github.com/lambdaclass/giza", branch = "lambdaworks-mod" }

winter-prover = { package = "winter-prover", git = "https://github.com/zerosync/winterfell", version = "0.4", features = ["concurrent"], default-features = false }
math = { package = "winter-math", git = "https://github.com/zerosync/winterfell", version = "0.4", default-features = false }
winter-air = { package = "winter-air", git = "https://github.com/zerosync/winterfell", version = "0.4", default-features = false }
crypto = { package = "winter-crypto", git = "https://github.com/zerosync/winterfell", version = "0.4", features = ["concurrent"] }
winter-utils = { package = "winter-utils", git = "https://github.com/zerosync/winterfell", default-features = false }
winter-verifier = { package = "winter-verifier", git = "https://github.com/zerosync/winterfell", default-features = false }

